Fix initial load z-index

--- a/src/sass/_pages.scss
+++ b/src/sass/_pages.scss
@@ -8,7 +8,7 @@
     height:88px;
     width:88px;
     left:50px;
-    z-index:100;
+    z-index:150;
 
     &:last-child{
       left:auto !important;
